# proceed

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docs.yml  integration.yml  publish.yml  pytest.yml
docs/: conf.py
docs/source/: api.rst  fizz_buzz.rst  hello_world.rst  index.rst  installation.rst  usage.rst
docs/source/_static/: custom.css
src/fizzbuzz/: fizzbuzz.py  fizzbuzz_runner.py
src/pipeline_stuff/: docker_runner.py  model.py  yaml_data.py
src/pipeline_stuff/fizzbuzz/: fizzbuzz.py  fizzbuzz_runner.py
src/proceed/: __about__.py  aggregator.py  cli.py  config_options.py  docker_runner.py  file_matching.py  model.py  runner_protocol.py  slurm_runner.py  yaml_data.py
tests/: gpus.yaml  smoke_test.yaml  test_add_one.py  test_aggregator.py  test_yaml.py  xeyes.yaml
tests/fizzbuzz/: test_fizzbuzz.py  test_fizzbuzz_container.py  test_fizzbuzz_pipeline.py  test_fizzbuzz_runner.py
tests/fizzbuzz/fixture_files/: fizzbuzz_pipeline.yaml
tests/pipeline_stuff/: test_model.py
tests/proceed/: test_aggregator.py  test_cli.py  test_docker_runner.py  test_file_matching.py  test_model.py  test_runner_protocol.py  test_slurm_runner.py
tests/proceed/fixture_files/: files_spec.yaml
tests/proceed/fixture_files/results_out/pipeline_a/456/: execution_record.yaml
tests/proceed/fixture_files/results_out/pipeline_b/abc/: bad_record.yml
