[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proceed"
version = "0.0.1"
description = "Execute pipelines based on files and containers."
keywords = []
authors = [
  { name="Ben Heasly", email="benjamin.heasly@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: OS Independent",
]
dependencies = ["docker", "PyYAML"]

[project.urls]
"Homepage" = "https://github.com/benjamin-heasly/proceed"
"Bug Tracker" = "https://github.com/benjamin-heasly/proceed/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.test.scripts]
cov = 'pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=proceed --cov=tests'

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/proceed"]
